test/valid/60294_short_circuit/short_circuit.mag
-- Author: 60294, Pedro Rosa
fun main(_): Unit -> Unit = 
    print(false && (1 / 0 == 0))