test/invalid-semantics/60294_redeclaring_print/redeclaring_print.mag
-- Author: 60294, Pedro Rosa
fun print (x): Int -> Int = x